--- a/SLBr/Resources/guest.html
+++ b/SLBr/Resources/guest.html
@@ -1,7 +1,4 @@
-﻿<!--Copyright © SLT Softwares. All rights reserved.
-Use of this source code is governed by a GNU license that can be found in the LICENSE file.-->
-
-<html style="background-repeat: no-repeat;background-size: cover;background-position: center;">
+﻿<html style="background-repeat: no-repeat;background-size: cover;background-position: center;">
 <head>
     <meta charset="utf-8" />
     <title>New Tab</title>
